Project got optimized